--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -48,3 +48,13 @@
   zoom: 80%;
   /* o transform: scale(0.8); */
 }
+
+.contenedore-zoom {
+  zoom: 85%;
+  /* o transform: scale(0.8); */
+}
+
+.contenedoresh-zoom {
+  zoom: 85%;
+  /* o transform: scale(0.8); */
+}
